--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
+    <head> 
         <meta charset="utf-8">
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
@@ -17,10 +17,63 @@
 			}
         </style>
         <script>
-		var count = 0; 
+		/*********************************
+			I used to think that I could not go on
+			And life was nothing but an awful song
+			But now I know the meaning of true love
+			I'm leaning on the everlasting arms
+			If I can see it, then I can do it
+			If I just believe it, there's nothing to it
+			I believe I can fly
+			I believe I can touch the sky
+			I think about it every night and day
+			Spread my wings and fly away
+			I believe I can soar
+			I see me running through that open door
+			I believe I can fly
+			I believe I can fly
+			I believe I can fly (whoo)
+			See I was on the verge of breaking down
+			Sometimes silence can seem so loud
+			There are miracles in life I must achieve
+			But first I know it starts inside of me, oh-oh
+			If I can see it, then I can be it
+			If I just believe it, there's nothing to it
+			I believe I can fly
+			I believe I can touch the sky
+			I think about it every night and day
+			Spread wings and fly away
+			I believe I can soar
+			I see me running through that open door
+			I believe I can fly
+			I believe I can fly
+			I believe I can fly (whoo!)
+			Hey, 'cause I believe in you
+			Oh
+			If I can see it (whoo), then I can do it (I can do it)
+			If I just believe it, there's nothing to it (hey)
+			I believe I can fly (whoo!)
+			I believe I can touch the sky
+			I think about it every night and day
+			Spread my wings and fly away
+			I believe I can soar
+			I see me running through that open door
+			I believe I can fly (I can fly)
+			I believe I can fly (I can fly)
+			I believe I can fly (I can fly)
+			If I just spread my wings (I can fly)
+			I can fly (I can fly)
+			I can fly (I can fly)
+			I can fly, hey! (I can fly)
+			If I just spread my wings (I can fly)
+			I can fly (I can fly, I can fly)
+			Whoo! (I can fly)
+			Hm-mm (fly, fly, fly)
+		****************************************/
+		var count = 0;
 		var player = 1;
 		function determine(id) {
-			var grids = [];
+			var grids = []; 
 			var isLine = false;
 			var currentSelection = document.getElementById(id);		
 
